--- a/index.html
+++ b/index.html
@@ -429,108 +429,72 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/age-of-empires-iii.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>A Treta dos Irmãos Piologo</h2>
-                <h3>Mobile</h3>
+                <h2>Age of Empires III</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/age-of-mythology.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Assassin's Creed</h2>
-                <h3>PC/PS3/Xbox 360</h3>
+                <h2>Age of Mythology</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Bad Day in LA</h2>
-                <h3>PC</h3>
+                <h2>Age of Mythology Tale of the Dragon</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/age-of-mythology-the-titans.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause</h2>
-                <h3>PC</h3>
+                <h2>Age of Mythology The Titans</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/anno-1404.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause 2</h2>
-                <h3>PC</h3>
+                <h2>Anno 1404</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/anno-1701.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Lego Batman</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Indiana Jones</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Indiana Jones 2</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Marvel Super Heroes</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Pirates of The Caribbean</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Star Wars</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Star Wars II</h2>
-                <h3>PC</h3>
+                <h2>Anno 1701</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
@@ -679,108 +643,60 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/simulation/construction-simulator-2012.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>A Treta dos Irmãos Piologo</h2>
-                <h3>Mobile</h3>
+                <h2>Construction Simulator 2012</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/simulation/house-builder.webp" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Assassin's Creed</h2>
-                <h3>PC/PS3/Xbox 360</h3>
+                <h2>House Builder</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/simulation/hunting-2008.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Bad Day in LA</h2>
-                <h3>PC</h3>
+                <h2>Hunting Simulator 2008</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/simulation/hunting-2009.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause</h2>
-                <h3>PC</h3>
+                <h2>Hunting Simulator 2009</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/simulation/hunting-unlimited-2010.webp" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause 2</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Batman</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Indiana Jones</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Indiana Jones 2</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Marvel Super Heroes</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Pirates of The Caribbean</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Star Wars</h2>
-                <h3>PC</h3>
-              </div>
-            </div>
-          </div>
-          <!-- Slide -->
-          <div class="swiper-slide">
-            <div class="box">
-              <div class="box-text">
-                <h2>Lego Star Wars II</h2>
-                <h3>PC</h3>
+                <h2>Hunting Simulator 2010</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
@@ -804,44 +720,59 @@
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/shooting/25-to-life.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>A Treta dos Irmãos Piologo</h2>
-                <h3>Mobile</h3>
+                <h2>25 To Life</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/shooting/arma-cold-war-assault.webp" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Assassin's Creed</h2>
-                <h3>PC/PS3/Xbox 360</h3>
+                <h2>ARMA Cold War Assault</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/shooting/battle-la.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Bad Day in LA</h2>
-                <h3>PC</h3>
+                <h2>Battle Los Angeles</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/shooting/battlefield-1.jpg" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause</h2>
-                <h3>PC</h3>
+                <h2>Battlefield 1</h2>
+                <h3>-</h3>
               </div>
             </div>
           </div>
           <!-- Slide -->
           <div class="swiper-slide">
             <div class="box">
+              <a href="#">
+                <img src="./assets/shooting/battlefield-1942.png" alt="" />
+              </a>
               <div class="box-text">
-                <h2>Just Cause 2</h2>
+                <h2>Battlefield 1942</h2>
                 <h3>PC</h3>
               </div>
             </div>
