--- a/shooting.html
+++ b/shooting.html
@@ -71,41 +71,51 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/shooting/25-to-life.jpg" alt=""/>
           </a>
           <div class="box-text">
-            <h2>A Treta dos Irmãos Piologo</h2>
-            <h3>Mobile</h3>
+            <h2>25 To Life</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/shooting/arma-cold-war-assault.webp" alt=""/>
           </a>
           <div class="box-text">
-            <h2>Assassin's Creed</h2>
-            <h3>PC/PS3/Xbox 360</h3>
+            <h2>ARMA Cold War Assault</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/shooting/battle-la.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Bad Day in LA</h2>
-              <h3>PC</h3>
+              <h2>Battle Los Angeles</h2>
+              <h3>-</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/shooting/battlefield-1.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
+              <h2>Battlefield 1</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-1942.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 1942</h2>
+              <h3>-</h3>
             </div>
         </div>
       </div>
