--- a/strategy.html
+++ b/strategy.html
@@ -71,41 +71,61 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/strategy/age-of-empires-iii.jpg" alt=""/>
           </a>
           <div class="box-text">
-            <h2>A Treta dos Irmãos Piologo</h2>
-            <h3>Mobile</h3>
+            <h2>Age of Empires III</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/strategy/age-of-mythology.jpg" alt=""/>
           </a>
           <div class="box-text">
-            <h2>Assassin's Creed</h2>
-            <h3>PC/PS3/Xbox 360</h3>
+            <h2>Age of Mythology</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Bad Day in LA</h2>
-              <h3>PC</h3>
+              <h2>Age of Mythology Tale of the Dragon</h2>
+              <h3>-</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/strategy/age-of-mythology-the-titans.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
+              <h2>Age of Mythology The Titans</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/anno-1404.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Anno 1404</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/anno-1701.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Anno 1701</h2>
+              <h3>-</h3>
             </div>
         </div>
       </div>
