--- a/simulation.html
+++ b/simulation.html
@@ -71,41 +71,51 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/simulation/construction-simulator-2012.jpg" alt=""/>
           </a>
           <div class="box-text">
-            <h2>A Treta dos Irmãos Piologo</h2>
-            <h3>Mobile</h3>
+            <h2>Construction Simulator 2012</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/simulation/house-builder.webp" alt=""/>
           </a>
           <div class="box-text">
-            <h2>Assassin's Creed</h2>
-            <h3>PC/PS3/Xbox 360</h3>
+            <h2>House Builder</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/simulation/hunting-2008.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Bad Day in LA</h2>
-              <h3>PC</h3>
+              <h2>Hunting Simulator 2008</h2>
+              <h3>-</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/simulation/hunting-2009.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
+              <h2>Hunting Simulator 2009</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/simulation/hunting-unlimited-2010.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Hunting Simulator 2010</h2>
+              <h3>-</h3>
             </div>
         </div>
       </div>
