--- a/infant.html
+++ b/infant.html
@@ -71,41 +71,51 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/infant/ice-age-3.png" alt=""/>
           </a>
           <div class="box-text">
-            <h2>A Treta dos Irmãos Piologo</h2>
-            <h3>Mobile</h3>
+            <h2>Ice Age 3 Dawn Of The Dinosaurs</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/infant/ice-age-4.jpeg" alt=""/>
           </a>
           <div class="box-text">
-            <h2>Assassin's Creed</h2>
-            <h3>PC/PS3/Xbox 360</h3>
+            <h2>Ice Age 4 Continental Drift Arctic Games</h2>
+            <h3>-</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/infant/ratatouille.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Bad Day in LA</h2>
-              <h3>PC</h3>
+              <h2>Ratatouille</h2>
+              <h3>-</h3>
             </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="#" alt=""/>
+            <img src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg" alt=""/>
           </a>
             <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
+              <h2>SpongeBob SquarePants: Creature from the Krusty Krab</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/infant/toy-story-3.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>SpongeBob SquarePants: Creature from the Krusty Krab</h2>
+              <h3>Toy Story 3</h3>
             </div>
         </div>
       </div>
