--- a/shooting.html
+++ b/shooting.html
@@ -81,6 +81,26 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/shooting/air-conflicts-pacific-carrier.png" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Air Conflicts: Pacific Carriers</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/air-conflicts-secret-wars.jpg" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Air Conflicts: Secret Wars</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/shooting/arma-cold-war-assault.webp" alt=""/>
           </a>
           <div class="box-text">
@@ -91,10 +111,30 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/shooting/attack-on-pearl-harbor.jpg" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Attack On Pearl Harbor</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/shooting/battle-la.jpg" alt=""/>
           </a>
             <div class="box-text">
               <h2>Battle Los Angeles</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battle-of-europe.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battle Of Europe</h2>
               <h3>-</h3>
             </div>
         </div>
@@ -115,6 +155,186 @@
           </a>
             <div class="box-text">
               <h2>Battlefield 1942</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-2SF.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 2: Special Forces</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-2142.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 2142</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield_3.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 3</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-4.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield 4</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-bad-company-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield Bad Company 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-hardline.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield Hardline</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-V.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield V</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlefield-vietnam.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlefield Vietnam</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlestrike-force-of-resistence.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlestrike - Force of Resistance</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlestrike-shadow-of-stalingrad.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlestrike - Shadow of Stalingrad</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlestrike-the-road-to-berlin.jpeg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlestrike - The Road To Berlin</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/battlestrike-the-siege.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Battlestrike - The Siege</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/blazing-angels-squadrons-of-WWII.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Blazing Angels Squadrons of WWII</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/brothers-in-arms-ds.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Brothers in Arms DS</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/brothers-in-arms-earned-in-blood.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Brothers in Arms: Earned in Blood</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/brothers-in-arms-hells-highway.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Brothers in Arms: Hell's Highway</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/brothers-in-arms-road-to-hill-30.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Brothers in Arms: Road to Hill 30</h2>
               <h3>-</h3>
             </div>
         </div>
