--- a/shooting.html
+++ b/shooting.html
@@ -338,6 +338,416 @@
               <h3>-</h3>
             </div>
         </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-2-big-red-one.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty 2 - Big Red One</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-3.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty 3</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-4-modern-warfare.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty 4 - Modern Warfare</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-advanced-warfare.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Advanced Warfare</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-black-ops.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Black Ops</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-black-ops-II.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Black Ops II</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-black-ops-III.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Black Ops III</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-ghosts.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Ghosts</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-modern-warfare-2.PNG" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Modern Warfare 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-modern-warfare-3.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty Modern Warfare 3</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-world-at-war.PNG" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty World at War</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-world-at-war-final-fronts.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty World at War - Final Fronts</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/call-of-duty-wwii.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty WWII</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/chrome-spec-force.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Call of Duty WWII</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/code-of-honor-the-french-foreing-legion.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Code of Honor: The French Foreign Legion</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/code-of-honor-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Code of Honor 2: Conspiracy Island</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/code-of-honor-3-desperate-measures.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Code of Honor 3: Desperate Measures</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/combat-wings-battle-of-britain.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Combat Wings: Battle Of Britain</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/combat-wings-battle-of-the-pacific.JPG" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Combat Wings: Battle Of The Pacific</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/conflict-desert-storm.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Conflict Desert Storm</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/conflict-desert-storm-II.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Conflict Desert Storm II</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/conflict-global-storm.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Conflict Global Storm</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/conflict-vietnam.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Conflict Vietnam</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/crysis.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Crysis</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/crysis-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Crysis 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/crysis-3.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Crysis 3</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/delta-force-black-hawn-down.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Delta Force Black Hawn Down</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/delta-force-xtreme.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Delta Force Xtreme</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/delta-force-xtreme-2.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Delta Force Xtreme 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/dogfight-1942.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Dogfight 1942</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/enemy-front.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Enemy Front</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/global-ops-commando-libya.webp" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Global Ops Commando Libya</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/gun.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>GUN</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/halo-combat-evolved.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Halo: Combat Evolved</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/halo-reach.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Halo: Reach</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/halo-2.png" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Halo 2</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/heavyfirea.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Heavy Fire Afghanistan</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/heavy-fire-shattered-spear.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Heavy Fire Shattered Spear</h2>
+              <h3>-</h3>
+            </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/heroes-of-the-pacific.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Heroes Of The Pacific</h2>
+              <h3>-</h3>
+            </div>
+        </div>
       </div>
     </section>
     <!-- Shooting Section End-->
